--- a/public/style.css
+++ b/public/style.css
@@ -74,6 +74,7 @@ a {
   font-family: "Merriweather Sans", sans-serif;
 }
 
+
 .Banner {
   display: flex;
   flex-direction: column;
@@ -94,34 +95,59 @@ a {
   box-shadow: var(--ui-shadow);
 }
 
-.WelcomeView {
-    background: url("food.jpg") left bottom;
-    background-size: cover;
+
+
+
+/* for Login page */
+
+.bodyLogin {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
 }
 
-.Message {
-  background: white;
-  padding: 30px;
-  border-bottom: var(--ui-shadow-border);
-  box-shadow: var(--ui-shadow);
+.formLogin {
+  max-width: 300px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.Message > .Title {
-  padding-bottom: 20px;
+.labelLogin {
+  display: block;
+  margin-bottom: 8px;
 }
 
-.Message > .Details {
-  display: flex;
-  flex-direction: column;
-  line-height: 1.5em;
+.inputLogin {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
 }
+
+.buttonLogin {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.buttonLogin:hover {
+  background-color: #45a049;
+}
+
+
+/* for Welcome page */
 
 .NavButtons {
   display: flex;
   width: 100%;
-  justify-content: space-around;
+  justify-content: center; /* Center the button */
   align-items: center;
-  padding: 0 20px;
+  padding: 20px;
 }
 
 .NavButton {
@@ -132,8 +158,7 @@ a {
   height: 55px;
   width: 150px;
 
-  background: #fa4141;
-
+  background: #4caf50; /* Green color, you can customize */
   border-radius: 30px;
 
   font-size: 16px;
@@ -146,9 +171,6 @@ a {
   box-shadow: var(--ui-shadow);
 }
 
-.UserView {
-    background: url("https://cdn.auth0.com/blog/whatabyte-portal/patio.jpeg") left
-      bottom;
-    background-size: cover;
+.NavButton:hover {
+  background-color: #45a049;
 }
-
