--- a/views/home.pug
+++ b/views/home.pug
@@ -4,5 +4,4 @@ html
     link(rel="stylesheet" type="text/css" href="/style.css")
   body.View
     .Banner
-      h1 My Website
-      p Welcome to our amazing website.
+      h1 The SyllySyncer
