--- a/views/login.pug
+++ b/views/login.pug
@@ -10,7 +10,6 @@ html
       label.labelLogin(for="password") Password:
       input.inputLogin(type="password" id="password" name="password" required)
 
-      button.buttonLogin(type="submit", href="/options") Login
+      button.buttonLogin(type="submit", href="/home") Login
 
-// Can get rid of when singup not needed
 <a href="/signup">Create a new account</a>
