--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -4,8 +4,9 @@ html
     link(rel="stylesheet" type="text/css" href="/style.css")
   body.View
     .Banner
-      h1 My Website
+      h1 The SyllySyncer
       p Welcome to our amazing website.
 
     .NavButtons
       a.NavButton(href="/login") Login
+      a.NavButton(href="/signup") Sign Up
