--- a/views/options.pug
+++ b/views/options.pug
@@ -2,7 +2,7 @@ html
   head
     title Options
     link(rel="stylesheet" type="text/css" href="/style.css")
-  body.View
+  body 
     .Banner
       h1 Insert Options here
       p This will be where we add options! 
