--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,7 +2,7 @@ html
   heads
     title Sign Up Page
     link(rel="stylesheet" type="text/css" href="/style.css")
-  body.bodyLogin
+  body
     form.formLogin(action="/signup" method="post")
       label.labelLogin(for="username") Username:
       input.inputLogin(type="text" id="username" name="username" required)
