--- a/views/options.pug
+++ b/views/options.pug
@@ -1,8 +1,41 @@
-html
+
+doctype html
+html(lang='en')
   head
-    title Options
-    link(rel="stylesheet" type="text/css" href="/style.css")
-  body 
-    .Banner
-      h1 Insert Options here
-      p This will be where we add options! 
+    meta(charset='UTF-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    title The SyllySyncer
+    link(rel='stylesheet', href='style.css')
+  body
+    .container
+      .top-banner
+        .left-section
+          span The SyllySyncer
+        .right-section
+          a(href='/options') Home     
+          a(href='/') Login
+    .dropdown-container
+      .row
+          .dropdown
+            label(for='dropdown1') Class:
+            select(id='dropdown1' onchange='handleDropdownChange(this)')
+              option(value='' disabled selected hidden) Select
+              option(value='1') 1
+              option(value='2') 2
+              option(value='3') 3
+          .dropdown
+            label(for='dropdown2') Section:
+            select(id='dropdown2' onchange='handleDropdownChange(this)')
+              option(value='' disabled selected hidden) Select
+              option(value='1') 1
+              option(value='2') 2
+              option(value='3') 3
+          .dropdown
+            label(for='dropdown3') Group Size:
+            select(id='dropdown3' onchange='handleDropdownChange(this)')
+              option(value='' disabled selected hidden) Select
+              option(value='1') 1
+              option(value='2') 2
+              option(value='3') 3
+    .button-container
+      a.button(href='/results') Generate
