welcome message works need css

--- a/views/options.pug
+++ b/views/options.pug
@@ -10,10 +10,12 @@ html(lang='en')
     .container
       .top-banner
         .left-section
-          span The SyllySyncer
+          span The SyllySyncer 
         .right-section
           a(href='/options') Home     
           a(href='/') Login
+    h2 Welcome #{username}!
+
     .dropdown-container
       .row
           .dropdown
