--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,15 @@ h1 {
   font-weight: bold;
 }
 
+h2 {
+  font-family: 'Comic Sans MS', cursive;
+  color: #FD6D2F;
+  text-align: center;
+  padding-top: 20px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .login-info-container {
   background-color: #FFD580;
   border-radius: 20px;
