--- a/views/options.pug
+++ b/views/options.pug
@@ -15,16 +15,14 @@ html(lang='en')
           a(href='/options') Home     
           a(href='/') Login
     h2 Welcome #{username}!
-
     .dropdown-container
       .row
           .dropdown
             label(for='dropdown1') Class:
             select(id='dropdown1' onchange='handleDropdownChange(this)')
               option(value='' disabled selected hidden) Select
-              option(value='1') 1
-              option(value='2') 2
-              option(value='3') 3
+              each cls in classData 
+                option(value= cls.className)= cls.className
           .dropdown
             label(for='dropdown2') Section:
             select(id='dropdown2' onchange='handleDropdownChange(this)')
