--- a/views/options.pug
+++ b/views/options.pug
@@ -21,15 +21,14 @@ html(lang='en')
             label(for='dropdown1') Class:
             select(id='dropdown1' onchange='handleDropdownChange(this)')
               option(value='' disabled selected hidden) Select
-              each cls in classData 
-                option(value= cls.className)= cls.className
+              each student in students
+                option(value= student.class)= student.class
           .dropdown
             label(for='dropdown2') Section:
             select(id='dropdown2' onchange='handleDropdownChange(this)')
               option(value='' disabled selected hidden) Select
-              option(value='1') 1
-              option(value='2') 2
-              option(value='3') 3
+              each student in students
+                option(value= student.section)= student.section
           .dropdown
             label(for='dropdown3') Group Size:
             select(id='dropdown3' onchange='handleDropdownChange(this)')
