--- a/views/options.pug
+++ b/views/options.pug
@@ -22,7 +22,8 @@ html(lang='en')
             select(id='dropdown1' onchange='handleDropdownChange(this)')
               option(value='' disabled selected hidden) Select
               each student in students
-                option(value= student.class)= student.class
+                if student.prof == username
+                  option(value= student.class)= student.class
           .dropdown
             label(for='dropdown2') Section:
             select(id='dropdown2' onchange='handleDropdownChange(this)')
