--- a/views/results.pug
+++ b/views/results.pug
@@ -14,6 +14,8 @@ html(lang='en')
           a(href='/options') Home     
           a(href='/') Login
     .content-container
+      h2 Class: #{selectedClass} 
+      h2 Section: #{selectedSection}
       .scrollable-box
             | Group 1
             br
