--- a/views/results.pug
+++ b/views/results.pug
@@ -1,4 +1,3 @@
-
 doctype html
 html(lang='en')
   head
@@ -12,15 +11,31 @@ html(lang='en')
         .left-section
           span The SyllySyncer
         .right-section
-          a(href='/options') Home     
+          a(href='/options') Home    
           a(href='/') Login
-    .content-container
-      .scrollable-box
-            each student in matchingStudents
-              each temp in student.timeArray
-                p= temp
-              
-           
-    .result-button-container 
-        a.button-left(href='/options') Home
-        a.button-right(href='#') Export
+      .content-container
+        .scrollable-box#resultsBox
+          each pair, index in pairs
+            p= 'Group ' + (index + 1) + ': ' + pair.student1 + ', ' + pair.student2
+      .result-button-container
+          a.button-left(href='/options') Home
+          a.button-right(href='#', id='exportButton') Export
+
+    script.
+      var pairs = !{JSON.stringify(pairs)}; 
+      document.getElementById('exportButton').addEventListener('click', function() {
+          console.log("Export button clicked");
+          var content = '';
+          pairs.forEach((pair, index) => {
+              content += 'Group ' + (index + 1) + ', ' + pair.student1 + ', ' + pair.student2 + '\n';
+          });
+
+          var csvContent = "data:text/csv;charset=utf-8," + content.replace(/\n/g, '\r\n');
+          var encodedUri = encodeURI(csvContent);
+          var link = document.createElement("a");
+          link.setAttribute("href", encodedUri);
+          link.setAttribute("download", "results.csv");
+          document.body.appendChild(link);
+          link.click();
+      });
+
