--- a/public/style.css
+++ b/public/style.css
@@ -128,7 +128,8 @@ button[type="submit"]:hover {
 }
 
 .right-section a:hover {
-  text-decoration: underline;
+ /* text-decoration: underline;*/
+  color: orange
 }
 
 
