--- a/views/options.pug
+++ b/views/options.pug
@@ -15,7 +15,7 @@ html(lang='en')
           span The SyllySyncer 
         .right-section
           a(href='/options') Home     
-          a(href='/') Login
+          a(href='/') Logout
     h2 Welcome #{username}!
     .dropdown-container
       .row
