--- a/views/results.pug
+++ b/views/results.pug
@@ -12,7 +12,7 @@ html(lang='en')
           span The SyllySyncer
         .right-section
           a(href='/options') Home    
-          a(href='/') Login
+          a(href='/') Logout
       .content-container
         .scrollable-box#resultsBox
           each pair, index in pairs
